# BankOCR

./: .gitignore  CMakeLists.txt  prova.cpp  provaOCR.cpp  provaOCR2.cpp
Tests/: OCRTest.cpp  runner.cpp
tools/: GreenswToXml.py
